Mobile friendly corrections
Revised as oer search console recommendations

--- a/gems-learner-profile.html
+++ b/gems-learner-profile.html
@@ -86,7 +86,7 @@
           <div class="container d-flex h-75 align-items-center my-5">
               <div class="mx-auto text-center my-5">
                   <h1 class="mx-auto my-2 text-uppercase text-white">GEMS International School</h1>
-                  <h5 class="text-white mx-auto mt-2 mb-3">GEMS Learner Profile</h5>
+                  <h4 class="text-white mx-auto mt-2 mb-3">GEMS Learner Profile</h4>
               </div>
           </div>
        </header>  
@@ -98,7 +98,9 @@
            </div>
            <div class="container">
                <div class="row my-5">
-                    <div class="col-lg-6 mt-5"><h3 class="text-center text-primary py-3">GEMS Learner Profile</h3><img class="img-fluid my-auto" src="assets/img/gems-learner-profile.svg" alt="" /></div>
+                    <div class="col-lg-6 mt-5"><h3 class="text-center text-primary py-3">GEMS Learner Profile</h3>
+                    <div class="container"><img class="img-fluid my-auto" src="assets/img/gems-learner-profile.svg" alt="Learner" /></div>
+                    </div>
                    <div class="col-lg-6 mt-5">
                          <div><h3 class="text-center text-primary py-3">Expected Learner Outcomes</h3><p>In achieving our educational purpose, the teaching, curricula and learning environments in <a href="https://gemsinternationalschoolgurgaon.com">GEMS schools</a> produce successful learners who, by the time they graduate:</p>
                             <ul><li>Are able to play an active role in their learning as life-long learners</li>
@@ -129,8 +131,10 @@
                     </div>
                     <p class="text-center">At GEMS International School we are driven by this value-led education system.</p>   
             </div> 
-            <div class="container text-center">
-                <iframe width="1080" height="460" src="https://www.youtube.com/embed/LuAlYIm_Irw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="container">
+                <div class="container-iframe text-center">
+                    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/LuAlYIm_Irw" frameborder="0"></iframe>
+                </div>
             </div>
        </div>
 
