--- a/safety-security.html
+++ b/safety-security.html
@@ -138,9 +138,7 @@
          </div>
          <div class="container">
             <h4>At GIS, Gurgaon, we are ensuring AI-based monitoring of all safety, <br>cleanliness and hygiene protocols.</h4>
-            <div class="container-iframe text-center"> 
-               <iframe class="responsive-iframe" src="https://www.youtube.com/embed/9OytWhR1504" frameborder="0"></iframe>
-            </div>
+            <div class="container-iframe text-center"><iframe class="responsive-iframe" src="https://www.youtube.com/embed/9OytWhR1504" frameborder="0"></iframe></div>
          </div>
          
       </div>
