Disale And Results
Disale And class X and 12th Results

--- a/curriculum.html
+++ b/curriculum.html
@@ -171,10 +171,17 @@
             <div class="container text-justify py-2">
                <p>From creative and performing arts to subject extensions and sports, we offer a range of activities to suit every energetic young mind. Regular sports activities include Swimming, Cricket, Football, Lawn Tennis, Boxing, Basketball, Table Tennis and Athletics to name but a few. Extra-curricular activities build students’ aspirations and provide them with the foundations and transferable skills to make new friends and, most importantly, have fun</p>
             </div>
+            <h4 class="text-primary text-center my-3">MEET THE TOPPERS OF 2019-20 !</h4>
+            <div class="container-fluid text-center">
+               <img class="img-thumbnail-3" src="assets/img/results-GIS-01.jpg" alt="best-international-school-gurgaon"> <img class="img-thumbnail-3" src="assets/img/results-GIS-02.jpg" alt="school-gurgaon"> <img class="img-thumbnail-3" src="assets/img/results-GIS-03.jpg" alt="top-school-gurgaon">
+            </div>
+            <div class="container-fluid text-center">
+               <img class="img-thumbnail-3" src="assets/img/results-GIS-04.jpg" alt="best-international-school-gurgaon"> <img class="img-thumbnail-3" src="assets/img/results-GIS-05.jpg" alt="school-gurgaon"> <img class="img-thumbnail-3" src="assets/img/results-GIS-06.jpg" alt="top-school-gurgaon">
+            </div>
             <div class="container py-5">
                <h4 class="text-primary text-center text-uppercase">Values-led Education</h4>
                <p>A variety of initiatives, designed to instill values in students, have been rolled out across GEMS schools, with teachers, student and parents all actively involved.</p>
-               <img src="assets/img/value-led-1.jpg" alt="Gurgaon"><br>
+               <img class="img-thumbnail-3" src="assets/img/value-led-1.jpg" alt="Gurgaon"><br>
                <h4 class="text-primary text-center pt-5">Jewels of Kindness and Respect: A Values-led Education</h4>
                <p class="text-justify">At GEMS Education we care about a values-led education and seek to encourage students to grow and develop their personal and interpersonal qualities. A variety of initiatives, designed to instill values in students, have been rolled out across GEMS schools, with teachers, student and parents all actively involved. The GEMS Jewels of Kindness & Respect initiative has been created to encourage students to think about showing all the qualities of kindness, such as respect, empathy, helpfulness, and compassion, to their friends, family and wider community with the belief that children learn best when there is close collaboration between home and school on core values.</p>
                <br>
@@ -219,13 +226,13 @@
             </div>
             <h3 class="text-primary text-center text-uppercase my-5"><u>New ways to learn</u></h3>
             <div class="row">
-               <div class="col-lg-6">
+               <div class="col-sm-6">
                   <p class="text-justify">
                      We are always looking to find new and creative ways to stimulate learning and continually striving to improve the way we teach. Our emphasis on enquiry-based approaches, both within and beyond traditional learning environments, means we’re quick to implement new technologies wherever we believe they will be beneficial; we are looking to develop well-rounded students with 21st century skills who are ready for an increasingly globalised world.<br><br>At GEMS International School, Gurgaon we benefit from best-practice teaching methods shared by professional educators all over the world but some of our freshest ideas come from listening to our students and their families. We make it our business to pass on what we learn to others because our ultimate goal is to provide an exceptional education to as many as possible.
                   </p>
                </div>
-               <div class="col-lg-6 my-auto">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/MPlmbuH73v4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+               <div class="col-sm-6 container-iframe">
+                  <iframe class="responsive-iframe" src="https://www.youtube.com/embed/MPlmbuH73v4"></iframe>
                </div>
             </div>
             <div class="container my-5 text-justify">
