--- a/schools-for-good.html
+++ b/schools-for-good.html
@@ -102,6 +102,8 @@
                     <p>The Global Teacher Prize is awarded by the Varkey Foundation under the patronage of HH Sheikh Mohammed bin Rashid Al Maktoum, UAE Vice President, Prime Minister and Ruler of Dubai.</p>
                     <h4 class="text-primary">Winners</h4>
                     <img class="img-border" src="https://media.gemseducation.com/media/58525/gtp-winners.png" alt="gems">
+                    <h4 class="text-primary text-centre mt-4">GTP 2020 Winner- Ranjit Disale, Zilla Parishad School, Maharashtra, India</h4>
+                    <img class="img-border my-3" src="assets/img/Disale.jpg" alt="ranjit-disale">
                     <p></p>
                     <h4 class="text-primary">Global Education Skills Forum</h4>
                     <img class="img-border" src="assets/img/gtp_skills.jpg" alt="GTP">
