--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
       <title>GEMS International School | GEMS School in Gurgaon</title>
       <meta name="keywords" content="school in gurgaon, schools in gurgaon, gurgaon school, gems education gurgaon, international school, international schools in gurgaon, school international, schools in palam vihar gurgaon, best cbse schools in gurgaon, best middle schools in gurgaon, schools in new gurgaon, primary schools in gurgaon, best schools in gurgaon, gurgaon top schools, gurgaon world school, school of gurgaon, gurgaon school fees, preschool, nursery admission, admission, daycare, kindergarten, primary school, secondary school, senior school, dps, ib, cbse, best schools in gurgaon, schools in gurgaon, top schools in gurgaon, school admission in gurgaon, best school in gurgaon, international schools in gurgaon, top international schools in gurgaon, cbse schools in gurgaon, school near me, orchids international school, top 20 schools in gurgaon, palam vihar school, best sports school in gurgaon">
       <link rel="icon" type="image/x-icon" href="assets/img/favicon.svg" />
-      <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap" rel="stylesheet">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script> 
-      <link href="css/styles.css" rel="stylesheet" />
+      <link href="css/purified.css" rel="stylesheet" />
       <link rel="canonical" href="https://gemsinternationalschoolgurgaon.com/">
       <script type="application/ld+json">{"@context":"http://schema.org","@type":"LocalBusiness","name":"Gems International School","image":"https://gemsinternationalschoolgurgaon.com/assets/img/gems-icon.png","telephone":["95821 99008","73030 96206"],"email":"contactus.gis@gemsedu.in","address":{"@type":"PostalAddress","streetAddress":"Block C-2, Palam Vihar,","addressLocality":"Gurgaon,","addressRegion":"Haryana","postalCode":"122017"},"url":"https://gemsinternationalschoolgurgaon.com/"}</script> 
       <meta property="og:title" content="Gems International School">
