--- a/beyond-books-and-boundaries.html
+++ b/beyond-books-and-boundaries.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/purified_1.css" rel="stylesheet" />
 
     </head>
     <body id="page-top">
