--- a/senior-school.html
+++ b/senior-school.html
@@ -21,7 +21,7 @@
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/purified_1.css" rel="stylesheet" />
   </head>
   <body id="page-top">
     <!-- Navigation-->
