Correction to JS
Correction to JS

--- a/index.html
+++ b/index.html
@@ -26,39 +26,67 @@
    <body id="page-top">
       <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
          <div class="container-fluid">
-            <a class="navbar-brand js-scroll-trigger" href="index.html"> <img class="logo1" src="assets/img/gems-icon.png" alt="Gems-Logo" />GEMS International School</a> <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"> <img class="img-hamburger" src="assets/img/menu.svg" alt="menu" /> </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-               <ul class="navbar-nav ml-auto">
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Home</a></li>
-                  <li class="nav-item">
-                     <a class="nav-link js-scroll-trigger">Why GEMS</a>
-                     <div class="dropdown">
-                        <div class="dropdown-menu"> <a class="dropdown-item" href="gems-learner-profile.html">Gems Learner Profile</a> <a class="dropdown-item" href="global-network.html">Global Network</a> <a class="dropdown-item" href="schools-for-good.html">Schools for Good</a></div>
-                     </div>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link js-scroll-trigger">About Us</a>
-                     <div class="dropdown">
-                        <div class="dropdown-menu"> <a class="dropdown-item" href="note-founder.html">Note from Founder</a> <a class="dropdown-item" href="note-principal.html">Note from Principal</a> <a class="dropdown-item" href="our-team.html">Our Team</a> <a class="dropdown-item" href="safety-security.html">Safety & Security</a> <a class="dropdown-item" href="career-at-gems.php">Careers at Gems</a> <a class="dropdown-item" href="contact-us.php">Contact Us</a></div>
-                     </div>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link js-scroll-trigger">For Parents</a>
-                     <div class="dropdown">
-                        <div class="dropdown-menu"> <a class="dropdown-item" href="parent-partnership.html">Parent Partnership</a></div>
-                     </div>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link js-scroll-trigger">Learning</a>
-                     <div class="dropdown">
-                        <div class="dropdown-menu"> <a class="dropdown-item" href="curriculum.html">Curriculum</a> <a class="dropdown-item" href="early-childhood.html">Early Childhood</a> <a class="dropdown-item" href="primary-years.html">Primary Years</a> <a class="dropdown-item" href="middle-school.html">Middle School</a> <a class="dropdown-item" href="senior-school.html">Senior School</a> <a class="dropdown-item" href="beyond-books-and-boundaries.html">Beyond Books & Boundaries</a> <a class="dropdown-item" href="university-destination.html">University Destintions</a></div>
-                     </div>
-                  </li>
-                  <li class="nav-item"> <a class="nav-link js-scroll-trigger" href="admissionform.php"> <button type="button" class="btn-2 btn-primary">Admissions</button> </a></li>
-               </ul>
-            </div>
+             <a class="navbar-brand js-scroll-trigger" href="index.html"><img class="logo1" src="assets/img/gems-icon.png" alt="Gems-Logo"/>GEMS International School</a>
+             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+               <img class="img-hamburger" src="assets/img/menu.svg" alt="menu"/>
+             </button>
+             <div class="collapse navbar-collapse" id="navbarResponsive">
+                 <ul class="navbar-nav ml-auto">
+                   <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html">Home</a>
+             </li>
+                     <li class="nav-item"><a class="nav-link js-scroll-trigger">Why GEMS</a>
+                             <!--new menu item drop down test-->
+                             <div class="dropdown">
+                                 <div class="dropdown-menu">
+                                     <a class="dropdown-item" href="gems-learner-profile.html">Gems Learner Profile</a>
+                                     <a class="dropdown-item" href="global-network.html">Global Network</a>
+                                     <a class="dropdown-item" href="schools-for-good.html">Schools for Good</a>
+                                 </div>
+                             </div>  
+                                 <!--new menu item drop down test-->
+                     </li>
+                     <li class="nav-item"><a class="nav-link js-scroll-trigger">About Us</a>
+                         <!--new menu item drop down test-->
+                         <div class="dropdown">
+                             <div class="dropdown-menu">
+                                 <a class="dropdown-item" href="note-founder.html">Note from Founder</a>
+                                 <a class="dropdown-item" href="note-principal.html">Note from Principal</a>
+                                 <a class="dropdown-item" href="our-team.html">Our Team</a>
+                                 <a class="dropdown-item" href="safety-security.html">Safety & Security</a>
+                                 <a class="dropdown-item" href="career-at-gems.php">Careers at Gems</a>
+                                 <a class="dropdown-item" href="contact-us.php">Contact Us</a>
+                             </div>
+                         </div>  
+                     </li>
+                     <li class="nav-item"><a class="nav-link js-scroll-trigger" >For Parents</a>
+                             <div class="dropdown">
+                                 <div class="dropdown-menu">
+                                     <a class="dropdown-item" href="parent-partnership.html">Parent Partnership</a>
+                                 </div>
+                             </div>  
+                                 <!--new menu item drop down test-->    
+                     </li>
+                     <li class="nav-item"><a class="nav-link js-scroll-trigger" >Learning</a>
+                             <!--new menu item drop down test-->
+                             <div class="dropdown">
+                                 <div class="dropdown-menu">
+                                     <a class="dropdown-item" href="curriculum.html">Curriculum</a>
+                                     <a class="dropdown-item" href="early-childhood.html">Early Childhood</a>
+                                     <a class="dropdown-item" href="primary-years.html">Primary Years</a>
+                                     <a class="dropdown-item" href="middle-school.html">Middle School</a>
+                                     <a class="dropdown-item" href="senior-school.html">Senior School</a>
+                                     <a class="dropdown-item" href="beyond-books-and-boundaries.html">Beyond Books & Boundaries</a>
+                                     <a class="dropdown-item" href="university-destination.html">University Destintions</a>
+                                 </div>
+                             </div>  
+                             <!--new menu item drop down test-->    
+                     </li>
+                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="admissionform.php"><button type="button" class="btn-2 btn-primary">Admissions</button></a></li>
+                     
+                 </ul>
+             </div>
          </div>
-      </nav>
+     </nav>
       <header class="masthead">
          <div class="container d-flex h-100 align-items-center">
             <div class="mx-auto text-center">
@@ -330,6 +358,7 @@
       <footer class="footer bg-blue small text-center text-white-50">
          <div class="container">Copyright © Gems Education & Saeloun 2020</div>
       </footer>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script> <script src="js/scripts.js"></script> 
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script> <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script> 
+      <script src="js/scripts.js"></script>
    </body>
 </html>
