--- a/index.html
+++ b/index.html
@@ -103,10 +103,19 @@
             <div class="row">
                <div class=" mx-auto">
                   <h2 class="text-white mb-4">GEMS Education</h2>
-                  <p class="text-white text-justify"> <a href="https://www.gemseducation.com/">GEMS Education</a> brings you its premium school in the heart of Gurgaon. Welcome to Gems International school, a lush green campus with modern facilities. Our curriculum framework imbibes practices from across the globe. We have the proven experience of delivering over 8 curricula like: Indian, UK’s EYFS (Early Years Foundation Stages), IB, American, Canadian, British, French and Arabic. Through our global network of schools, integrating their best practices into our teaching. We have put together a modern-day curriculum framework for your child. Value-based education is the foundation of a child’s growth. Everything at GEMS International School stems from our deep-rooted Core Values. Come visit us and take a tour of one of the best international school in Gurgaon.</p>
+                  <p class="text-white text-justify"> <a href="https://www.gemseducation.com/">GEMS Education</a> brings you its premium school in the heart of Gurgaon. Welcome to Gems International school, a lush green campus with modern facilities. Our curriculum framework imbibes practices from across the globe. We have the proven experience of delivering over 8 curricula like: Indian, UK’s EYFS (Early Years Foundation Stages), IB, American, Canadian, British, French and Arabic. Through our global network of schools, integrating their best practices into our teaching. We have put together a modern-day curriculum framework for your child. Value-based education is the foundation of a child’s growth. Everything at GEMS International School stems from our deep-rooted Core Values. And we are committed to become one of the <strong>top 10 school of gurgaon.</strong>  Come visit us and take a tour of one of the </p> <h4 class="text-white">Best international school in Gurgaon</h4> 
                </div>
             </div>
             <img class="img-fluid" src="assets/img/Gems-Difference.png" alt="gems-international-school-difference" />
+            <div class="text-white">
+               <h4 class="mb-5"><u>Why GEMS International School:</u></h4>
+                  <h5>Awarded Best School in Gurgaon</h5><p>for Career Counselling by Education World</p>
+                  <h5>Top school in gurgaon</h5><p>for best skill development by GSLC</p>
+                  <h5>We are also ranked the best school in gurgaon for nursery / early years</h5>
+                  <h5> First choice for school in Palam Vihar</h5>
+                  <h6>Visit us to <a href="https://gemsinternationalschoolgurgaon.com/">know more</a> about our rercent achievements</h6>
+
+            </div>
          </div>
       </section>
       <section class="parent-section" id="projects">
@@ -115,7 +124,7 @@
                <div class="col-xl-4 col-lg-5 p-3">
                   <div class=" text-center text-lg-left">
                      <h4 class="text-primary text-uppercase"><strong>Parent Testimonials</strong></h4>
-                     <p class="text-black mb-0">Parents at Gems International School are regularly involved in the students daily life. Take a look at what some of our parents have to say.</p>
+                     <p class="text-black mb-0"><a href="https://gemsinternationalschoolgurgaon.com/parent-partnership.html">Parents</a> at Gems International School are regularly involved in the students daily life. Take a look at what some of our parents have to say.</p>
                   </div>
                </div>
                <div class="col-xl-8 col-lg-7 p-1">
@@ -269,7 +278,7 @@
          <div class="container text-white">
             <h3 class="text-primary text-center text-uppercase">Recent Achievements</h3>
             <div class="container text-center"><img class="img-thumbnail-2" src="assets/img/trophy.svg" alt="awards"></div>
-            <p>At GEMS International School, we nurture student and teacher achievements and have a personalised focus on individual talents. Our students always keep us on our toes. Our students are given the opportunity to excel in and are recognised in areas such as Academics, Sports, Performing and Visual Arts, Science, Technology, Innovation, Debates, Communication, Conservation of the Environment. Over the past 10 years, GEMS students have won over 500 international, national and regional awards for academics, sport, and the arts.</p>
+            <p>At <a href="https://gemsinternationalschoolgurgaon.com/">GEMS International School</a>, we nurture student and teacher achievements and have a personalised focus on individual talents. Our students always keep us on our toes. Our students are given the opportunity to excel in and are recognised in areas such as Academics, Sports, Performing and Visual Arts, Science, Technology, Innovation, Debates, Communication, Conservation of the Environment. Over the past 10 years, GEMS students have won over 500 international, national and regional awards for academics, sport, and the arts.</p>
          </div>
          <!-- Awards -->
         <div class="container">
@@ -364,6 +373,8 @@
                <div class="col-md-3"><img class="img-thumbnail-badge" src="assets/img/badge-3.jpg" alt="top-school"><h4 class="text-warning">Fit India<br> School</h4><p class="text-white text-justify">The Fit India Movement is a movement towards fitness and wellness, towards a healthier India. GIS is recognised as a five star school by CBSE for Sports, fitness and wellness initiatives.</p></div>
                <div class="col-md-3"><img class="img-thumbnail-badge" src="assets/img/badge-4.jpg" alt="top-school"><h4 class="text-warning">Microsoft Showcase School</u></h4><p class="text-white text-justify">GIS has earned the prestigious honour as a Microsoft Showcase school. Advantages of technology are deeply embedded in our personalised pedagogical practices.</p></div>
             </div>
+            <br>
+            <h4 class="text-white-50">Did you know that <a href="https://gemsinternationalschoolgurgaon.com/index.html">GEMS International School</a>, Gurgaon, has one of the best Day care facilities for your child.</h4>
           </div>
         </div>
       </section>
