--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
       <meta name="description" content="One of the Best CBSE School in Gurgaon, Gems International School, Gurgaon is a school that provides your child with the best educational practices." />
       <meta name="author" content="Gems International School, Gurgaon" />
-      <title>GEMS International School, Gurgaon | Best International School & Top School in Gurgaon</title>
+      <title>GEMS International School | Best International School | Top School in Gurgaon</title>
       <meta name="keywords" content="school in gurgaon, schools in gurgaon, gurgaon school, gems education gurgaon, international school, international schools in gurgaon, school international, schools in palam vihar gurgaon, best cbse schools in gurgaon, best middle schools in gurgaon, schools in new gurgaon, primary schools in gurgaon, best schools in gurgaon, gurgaon top schools, gurgaon world school, school of gurgaon, gurgaon school fees, preschool, nursery admission, admission, daycare, kindergarten, primary school, secondary school, senior school, dps, ib, cbse, best schools in gurgaon, schools in gurgaon, top schools in gurgaon, school admission in gurgaon, best school in gurgaon, international schools in gurgaon, top international schools in gurgaon, cbse schools in gurgaon, school near me, orchids international school, top 20 schools in gurgaon, palam vihar school, best sports school in gurgaon">
       <link rel="icon" type="image/x-icon" href="assets/img/favicon.svg" />
       <link rel="preconnect" href="https://fonts.gstatic.com">
