Updates to Our team
Jennifer/Kashish/ Seema sareen added to the teams page

--- a/our-team.html
+++ b/our-team.html
@@ -127,14 +127,6 @@
             <div class="row">
                <div class="col-lg-4 text-center">
                   <div class="card">
-                     <img src="assets/img/sindhu.jpg" class="card-img-top" alt="Supervisor-middle-school">
-                     <div class="card-body">
-                        <p class="card-text"><strong>Ms. Sindhu Panicker</strong><br>Section Head-Middle School<br>GIS</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-4 text-center">
-                  <div class="card">
                      <img src="assets/img/kajal.jpg" class="card-img-top" alt="Supervisor-early-years">
                      <div class="card-body">
                         <p class="card-text"><strong>Ms. Kajal Sareen</strong><br>Section Head- Early Years<br>GIS</p>
@@ -146,6 +138,34 @@
                      <img src="assets/img/amit.jpg" class="card-img-top" alt="admin-marketing">
                      <div class="card-body">
                         <p class="card-text"><strong>Mr. Amit Prabhakar</strong><br>Marketing & Admin Head<br>GIS</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 text-center">
+                  <div class="card">
+                     <img src="assets/img/Jennifer.jpg" class="card-img-top" alt="Supervisor-middle-school">
+                     <div class="card-body">
+                        <p class="card-text"><strong>Ms. Jennifer Swole</strong><br>Special Educator <br>GIS</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="container my-5">
+            <div class="row">
+               <div class="col-lg-4 text-center">
+                  <div class="card">
+                     <img src="assets/img/Seema-Sareen.jpg" class="card-img-top" alt="Supervisor-early-years">
+                     <div class="card-body">
+                        <p class="card-text"><strong>Ms. Seema Sareen</strong><br>Chair of Drama, Media & Film<br>GIS</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 text-center">
+                  <div class="card">
+                     <img src="assets/img/Kashish.jpg" class="card-img-top" alt="admin-marketing">
+                     <div class="card-body">
+                        <p class="card-text"><strong>Ms. Kashish Behl</strong><br>Inclusion Manager<br>GIS</p>
                      </div>
                   </div>
                </div>
