--- a/our-team.html
+++ b/our-team.html
@@ -117,7 +117,7 @@
                   <div class="card">
                      <img src="assets/img/seema.jpg" class="card-img-top" alt="head-mistress">
                      <div class="card-body">
-                        <p class="card-text"><strong>Ms. Seema Prabhakar</strong><br>Head Mistress<br>GIS</p>
+                        <p class="card-text"><strong>Ms. Seema Prabhakar</strong><br>Principal- Primary & Middle wing<br>GIS</p>
                      </div>
                   </div>
                </div>
