--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                <h1 class="mx-auto my-0 text-uppercase">Gems International School</h1>
                <h2 class="text-white-50 mx-auto mt-2 mb-5">Welcome to GIS, Palam Vihar, Gurgaon.</h2>
                <a class="btn btn-primary js-scroll-trigger" href="admissionform.php">For Admissions</a>
-               <h6 class="text-white mt-3">Skip the queue for admissions. Fill up a few details in the link above and get a call back.</h6>
+               <p class="text-white mt-3">Skip the queue for admissions. Fill up a few details in the link above and get a call back.</p>
             </div>
          </div>
       </header>
@@ -289,11 +289,11 @@
                      <div class="d-flex h-100">
                         <div class="project-text w-100 my-auto mx-2 text-center text-lg-left">
                            <h3 class="text-white">Our Vision</h3>
-                           <p class="mb-0 text-white">Provide an exceptional quality education to meet the needs of an international community.</p>
+                           <h6 class="mb-0 text-white">Provide an exceptional quality education to meet the needs of an international community.</h6>
                            <hr class="d-none d-lg-block mb-0 ml-0" />
                            <br>
                            <h3 class="text-white">Our Mission</h3>
-                           <p class="mb-0 text-white">To develop lifelong learners who engage in meaningful learning experiences that build compassion, resilience and understanding of their role in the community.</p>
+                           <h6 class="mb-0 text-white">To develop lifelong learners who engage in meaningful learning experiences that build compassion, resilience and understanding of their role in the community.</h6>
                            <hr class="d-none d-lg-block mb-0 ml-0" />
                         </div>
                      </div>
@@ -308,7 +308,7 @@
                            <h3 class="text-white">GEMS Learner</h3>
                            <hr class="d-none d-lg-block mb-0 ml-0 float-right" />
                            <br>
-                           <p class="text-white"> A GEMS Learner is: <br>Respectful and inclusive, celebrating diversity. <br>Aspirational and inspirational in pursuit of excellence. <br>Committed to the well-being of people & environment. <br>Open-minded, creative, resilient and reflective. <br>Passionate and determined in driving positive change. <br>Ethical in our actions and accountable for them.</p>
+                           <h6 class="text-white"> A GEMS Learner is: <br>Respectful and inclusive, celebrating diversity. <br>Aspirational and inspirational in pursuit of excellence. <br>Committed to the well-being of people & environment. <br>Open-minded, creative, resilient and reflective. <br>Passionate and determined in driving positive change. <br>Ethical in our actions and accountable for them.</h6>
                         </div>
                      </div>
                   </div>
@@ -430,7 +430,7 @@
                         <img class="img-icon2 mb-4" src="assets/img/map.svg" alt="gurgaon-school" />
                         <h4 class="text-uppercase m-0">Address</h4>
                         <hr class="my-4" />
-                        <div class="small text-black-50">Block C-2, Palam Vihar, Gurgaon, Haryana-122017</div>
+                        <div class="small text-black">Block C-2, Palam Vihar, Gurgaon, Haryana-122017</div>
                      </div>
                   </div>
                </div>
@@ -440,7 +440,7 @@
                         <img class="img-icon2 mb-4" src="assets/img/envelope.svg" alt="gurgaon-school" />
                         <h4 class="text-uppercase m-0">Email</h4>
                         <hr class="my-4" />
-                        <div class="small text-black-50"><a href="#!">contactus.gis@gemsedu.in</a></div>
+                        <div class="small text-black"><a href="#!">contactus.gis@gemsedu.in</a></div>
                      </div>
                   </div>
                </div>
@@ -450,7 +450,7 @@
                         <img class="img-icon2 mb-4" src="assets/img/phone.svg" alt="gurgaon-school" />
                         <h4 class="text-uppercase m-0">Phone</h4>
                         <hr class="my-4" />
-                        <div class="small text-black-50">95821 99008 | 73030 96206</div>
+                        <div class="small text-black">95821 99008 | 73030 96206</div>
                      </div>
                   </div>
                </div>
