--- a/gems-learner-profile.html
+++ b/gems-learner-profile.html
@@ -9,10 +9,9 @@
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.svg" />
         
         <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-        <link href="css/purified_1.css" rel="stylesheet" />
+        <link href="css/purified.css" rel="stylesheet" />
 
     </head>
     <body id="page-top">
@@ -192,13 +191,13 @@
                 </div>
             </section>
           <!-- Footer-->
-          <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Gems Education & Saeloun 2020</div></footer>
-          <!-- Bootstrap core JS-->
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-          <!-- Third party plugin JS-->
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-          <!-- Core theme JS-->
-          <script src="js/scripts.js"></script>
+          <footer class="footer bg-blue small text-center text-white-50">
+            <div class="container">Copyright © Gems Education & Saeloun 2020</div>
+         </footer>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+         </script> 
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script> 
+         <script src="js/scripts.js"></script>
       </body>
   </html>
   
