--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             <img class="img-fluid" src="assets/img/Gems-Difference.png" alt="gems-international-school-difference" />
             <div class="text-white">
-               <h4 class="mb-5"><u>Why GEMS International School:</u></h4>
+               <h4 class="mb-5">Why GEMS International School:</h4>
                   <h5>Awarded Best School in Gurgaon</h5><p>for Career Counselling by Education World</p>
                   <h5>Top school in gurgaon</h5><p>for best skill development by GSLC</p>
                   <h5>We are also ranked the best school in gurgaon for nursery / early years</h5>
